# hippp

./: .clangd  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/example/device/: matrix_multiplication.h  vector_add.h
include/example/origin/: matrix_multiplication.h  vector_add.h
include/example/raii/: matrix_multiplication.h  vector_add.h
include/hip_raii/: array.hpp  buffer.hpp  context.hpp  event.hpp  hip_raii.hpp  host_buffer.hpp  kernel.hpp  stream.hpp
src/: main.cpp
src/benchmark/: matrix_multiplication.hpp  vector_add.hpp
src/example/: vector_add.cpp  vector_add.hip  vector_add_raii.cpp
src/example/device/: matrix_multiplication.hip  vector_add.hip
src/example/origin/: matrix_multiplication.hip  vector_add.hip
src/example/raii/: matrix_multiplication.hip  vector_add.hip
tests/: test_main.cpp
tests/mock_hip/hip/: hip_runtime.h
